allowing java9+ calls