@@ -5,8 +5,6 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -48,7 +46,7 @@ public class RootTrustBase {
     this.networkId = networkId;
     this.epoch = epoch;
     this.epochStartRound = epochStartRound;
-    this.rootNodes = Collections.unmodifiableSet(new HashSet<>(rootNodes));
+    this.rootNodes = Set.copyOf(rootNodes);
     this.quorumThreshold = quorumThreshold;
     this.stateHash = Arrays.copyOf(stateHash, stateHash.length);
     this.changeRecordHash = changeRecordHash == null
@@ -58,15 +56,10 @@ public class RootTrustBase {
         ? null
         : Arrays.copyOf(previousEntryHash, previousEntryHash.length);
     this.signatures = signatures.entrySet().stream()
-        .collect(
-            Collectors.collectingAndThen(
-                Collectors.toMap(
-                    Map.Entry::getKey,
-                    e -> Arrays.copyOf(e.getValue(), e.getValue().length)
-                ),
-                Collections::unmodifiableMap
-            )
-        );
+        .collect(Collectors.toMap(
+            Map.Entry::getKey,
+            e -> Arrays.copyOf(e.getValue(), e.getValue().length)
+        ));
   }
 
   /**
@@ -165,15 +158,10 @@ public class RootTrustBase {
    */
   public Map<String, byte[]> getSignatures() {
     return this.signatures.entrySet().stream()
-        .collect(
-            Collectors.collectingAndThen(
-                Collectors.toMap(
-                    Map.Entry::getKey,
-                    e -> Arrays.copyOf(e.getValue(), e.getValue().length)
-                ),
-                Collections::unmodifiableMap
-            )
-        );
+        .collect(Collectors.toMap(
+            Map.Entry::getKey,
+            e -> Arrays.copyOf(e.getValue(), e.getValue().length)
+        ));
   }
 
   /**
