@@ -5,8 +5,6 @@ import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
@@ -65,8 +63,8 @@ public class Token<R extends MintTransactionReason> {
 
     this.state = state;
     this.genesis = genesis;
-    this.transactions = Collections.unmodifiableList(new ArrayList<>(transactions));
-    this.nametags = Collections.unmodifiableList(new ArrayList<>(nametags));
+    this.transactions = List.copyOf(transactions);
+    this.nametags = List.copyOf(nametags);
   }
 
   /**
@@ -170,7 +168,7 @@ public class Token<R extends MintTransactionReason> {
       TokenState state,
       MintTransaction<R> transaction
   ) throws VerificationException {
-    return Token.create(trustBase, state, transaction, Collections.emptyList());
+    return Token.create(trustBase, state, transaction, List.of());
   }
 
   /**
@@ -196,7 +194,7 @@ public class Token<R extends MintTransactionReason> {
     Objects.requireNonNull(trustBase, "Trust base cannot be null");
     Objects.requireNonNull(nametags, "Nametag tokens cannot be null");
 
-    Token<R> token = new Token<>(state, transaction, Collections.emptyList(), nametags);
+    Token<R> token = new Token<>(state, transaction, List.of(), nametags);
     VerificationResult result = token.verify(trustBase);
     if (!result.isSuccessful()) {
       throw new VerificationException("Token verification failed", result);
@@ -265,7 +263,7 @@ public class Token<R extends MintTransactionReason> {
     results.add(
         VerificationResult.fromChildren(
             "Genesis verification",
-            Collections.singletonList(this.genesis.verify(trustBase))
+            List.of(this.genesis.verify(trustBase))
         )
     );
 
@@ -287,7 +285,7 @@ public class Token<R extends MintTransactionReason> {
     results.add(
         VerificationResult.fromChildren(
             "Current state verification",
-            Arrays.asList(
+            List.of(
                 this.verifyNametagTokens(trustBase),
                 this.verifyRecipient(),
                 this.verifyRecipientData()
@@ -327,7 +325,7 @@ public class Token<R extends MintTransactionReason> {
 
     Address transactionRecipient = ProxyAddress.resolve(
         previousTransaction.getData().getRecipient(), this.nametags);
-    return VerificationResult.fromChildren("Recipient verification", Collections.singletonList(
+    return VerificationResult.fromChildren("Recipient verification", List.of(
         expectedRecipient.equals(transactionRecipient)
             ? VerificationResult.success()
             : VerificationResult.fail("Recipient address mismatch")
@@ -344,7 +342,7 @@ public class Token<R extends MintTransactionReason> {
         ? this.genesis
         : this.transactions.get(this.transactions.size() - 1);
 
-    return VerificationResult.fromChildren("Recipient data verification", Collections.singletonList(
+    return VerificationResult.fromChildren("Recipient data verification", List.of(
         previousTransaction.containsRecipientData(this.state.getData().orElse(null))
             ? VerificationResult.success()
             : VerificationResult.fail(
