@@ -8,7 +8,6 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -114,8 +113,7 @@ public class MintTransaction<R extends MintTransactionReason> extends
         .orElse(VerificationResult.success());
 
     if (!reasonResult.isSuccessful()) {
-      return VerificationResult.fail(
-          "Mint reason verification failed", Collections.singletonList(reasonResult));
+      return VerificationResult.fail("Mint reason verification failed", List.of(reasonResult));
     }
 
     InclusionProofVerificationStatus inclusionProofStatus = this.getInclusionProof().verify(
